--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "json": "json-server db.json",
-    "test:ui": "vitest --ui"
+    "server": "json-server db.json",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -18,7 +19,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/user-event": "^14.5.2",
-    "@vitest/ui": "^2.1.3",
+    "@vitest/ui": "^2.0.5",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
@@ -42,12 +43,14 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/coverage-v8": "^2.0.5",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "msw": "^2.4.12",
     "postcss": "^8.4.47",
     "react-test-renderer": "^18.3.1",
     "redux-mock-store": "^1.5.4",
@@ -55,6 +58,6 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8",
-    "vitest": "^2.1.3"
+    "vitest": "^2.0.5"
   }
 }
