--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^22.7.8",
     "@vitest/ui": "^2.0.5",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
@@ -39,6 +40,7 @@
     "@eslint/js": "^9.11.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-syntax-highlighter": "^15.5.13",
